    'extend_existing'.   'extend_existing' is equivalent
    to 'useexisting' - the existing Table is returned,
    and additional constructor elements are added.
    With 'keep_existing', the existing Table is returned,
    but additional constructor elements are not added -
    these elements are only applied when the Table
    is newly created.   [ticket:2109]

-event
  - Added @event.listens_for() decorator, given
    target + event name, applies the decorated 
    function as a listener.  [ticket:2106]

- pool
  - AssertionPool now stores the traceback indicating
    where the currently checked out connection was
    acquired; this traceback is reported within
    the assertion raised upon a second concurrent 
    checkout; courtesy Gunnlaugur Briem 
    [ticket:2103]

- oracle
  - Using column names that would require quotes
    for the column itself or for a name-generated
    bind parameter, such as names with special
    characters, underscores, non-ascii characters,
    now properly translate bind parameter keys when
    talking to cx_oracle.  [ticket:2100]  (Also
    in 0.6.7)

- documentation
  - Documented SQLite DATE/TIME/DATETIME types.
    [ticket:2029] (also in 0.6.7)

  - Fixed mutable extension docs to show the 
    correct type-association methods.
    [ticket:2118]

0.7.0b3
=======
- general
  - Lots of fixes to unit tests when run under Pypy
    (courtesy Alex Gaynor).

- orm
  - Changed the underlying approach to query.count().
    query.count() is now in all cases exactly:

        query.
            from_self(func.count(literal_column('1'))).
            scalar()

    That is, "select count(1) from (<full query>)".
    This produces a subquery in all cases, but 
    vastly simplifies all the guessing count()
    tried to do previously, which would still
    fail in many scenarios particularly when
    joined table inheritance and other joins
    were involved.  If the subquery produced
    for an otherwise very simple count is really 